--- a/form-request.html
+++ b/form-request.html
@@ -1,203 +1,48 @@
-<!DOCTYPE html>
-<html lang="id">
-<head>
-<meta charset="UTF-8">
-<title id="page-title">REQUEST LIBUR / CUTI JADWAL BULAN DEPAN</title>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/air-datepicker@3.5.0/air-datepicker.min.css">
-
-<style>
-/* --- STYLE CSS MODERN --- */
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin: 0;
-  min-height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: linear-gradient(135deg, #74ebd5, #ACB6E5);
-  padding: 20px;
-}
-
-.container {
-  background: #fff;
-  padding: 35px 30px 40px;
-  border-radius: 20px;
-  box-shadow: 0 12px 35px rgba(0,0,0,0.15);
-  width: 480px;
-  max-width: 100%;
-  animation: fadeIn 0.6s ease-in-out;
-  position: relative;
-}
-
-.container::before {
-  content: "";
-  position: absolute;
-  width: 180%;
-  height: 180%;
-  background: radial-gradient(circle at top left, rgba(172,182,229,0.15), transparent 70%);
-  top: -50%;
-  left: -50%;
-  transform: rotate(25deg);
-  pointer-events: none;
-}
-
-h2 {
-  text-align: center;
-  margin-bottom: 25px;
-  font-size: 24px;
-  font-weight: 700;
-  background: linear-gradient(90deg, #4e54c8, #8f94fb);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  letter-spacing: 1px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
-}
-
-label {
-  display: block;
-  margin-bottom: 6px;
-  font-size: 14px;
-  font-weight: 600;
-  color: #444;
-}
-
-input, select {
-  width: 100%;
-  padding: 12px 14px;
-  border: 1px solid #ddd;
-  border-radius: 10px;
-  font-size: 14px;
-  margin-bottom: 16px;
-  box-sizing: border-box;
-  transition: all 0.3s ease;
-  background-color: #fdfdfd;
-}
-
-input:focus, select:focus {
-  border-color: #4e54c8;
-  box-shadow: 0 0 8px rgba(78,84,200,0.3);
-  background-color: #fff;
-  outline: none;
-}
-
-input[readonly] {
-  background-color: #f3f3f3;
-  color: #555;
-}
-
-button[type="submit"] {
-  width: 100%;
-  padding: 14px;
-  margin-top: 5px;
-  font-size: 15px;
-  font-weight: 600;
-  border: none;
-  border-radius: 12px;
-  cursor: pointer;
-  transition: all 0.3s ease;
-  background: linear-gradient(90deg, #11998e, #38ef7d);
-  color: #fff;
-  box-shadow: 0 6px 15px rgba(17,153,142,0.35);
-}
-
-button[type="submit"]:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 10px 20px rgba(17,153,142,0.45);
-}
-
-#status {
-  margin-top: 18px;
-  text-align: center;
-  font-size: 14px;
-  font-weight: 500;
-  min-height: 28px;
-  padding: 6px;
-  border-radius: 8px;
-}
-
-.success { color: #155724; background: #d4edda; border: 1px solid #c3e6cb; }
-.error   { color: #721c24; background: #f8d7da; border: 1px solid #f5c6cb; }
-
-#footer {
-  font-size: 11px;
-  color: #666;
-  text-align: center;
-  margin-top: 20px;
-  line-height: 1.4;
-}
-
-@keyframes fadeIn {
-  from { opacity: 0; transform: translateY(-15px); }
-  to { opacity: 1; transform: translateY(0); }
-}
-</style>
-</head>
-<body>
-
-<div class="container">
-  <h2 id="header-text">REQUEST LIBUR / CUTI JADWAL BULAN DEPAN</h2>
-
-  <form id="requestForm">
-    <label>NIK</label>
-    <input type="text" id="nik" name="nik" readonly>
-
-    <label>Nama</label>
-    <input type="text" id="nama" name="nama" readonly>
-
-    <label>Group</label>
-    <input type="text" id="group" name="group" readonly>
-
-    <label>Request Libur (Klik kotak input)</label>
-    <input type="text" id="libur" name="libur" placeholder="Pilih tanggal libur" readonly>
-
-    <label>Request Cuti (Klik kotak input)</label>
-    <input type="text" id="cuti" name="cuti" placeholder="Pilih tanggal cuti" readonly>
-
-    <label>Request Lainnya</label>
-    <input type="text" id="requestLainnya" name="requestLainnya" placeholder="Jawaban singkat, maks 80 karakter" maxlength="80">
-
-    <label>Ekstrakulikuler yang diikuti</label>
-    <select id="ekstrakulikuler" name="ekstrakulikuler" required>
-      <option value="">-- Pilih --</option>
-      <option value="FUTSAL">FUTSAL</option>
-      <option value="BADMINTON">BADMINTON</option>
-      <option value="FUTSAL & BADMINTON">FUTSAL & BADMINTON</option>
-      <option value="TIDAK MENGIKUTI">TIDAK MENGIKUTI</option>
-    </select>
-
-    <button type="submit">KIRIM REQUEST</button>
-    <div id="status"></div>
-
-    <div id="footer">
-      Silakan Request Jadwal sesuai keperluan saja.<br>
-      Inputan bisa direvisi / diganti berulang kali. Gunakan dengan bijak! 🚀
-    </div>
-  </form>
-</div>
-
 <script src="https://cdn.jsdelivr.net/npm/air-datepicker@3.5.0/air-datepicker.min.js"></script>
 <script>
-/* === KONFIGURASI SCRIPT === */
+// === URL Apps Script ===
 const scriptURL = "https://script.google.com/macros/s/AKfycbyrVWiH3HUNiNwdWR-AshygBO1yHv4ltdNeUgkcJS5ZyrBJsILxjRFjTd-YzXNTSUtF/exec";
 const quotaURL = scriptURL;
-const MAX_KUOTA_HARIAN = 21; // ✅ revisi: kuota maksimal per hari
+const MAX_KUOTA_HARIAN = 21; // Disesuaikan dengan GAS
 
 let datepickerLibur = null;
-let datepickerCuti = null;
+let datepickerCuti = null; 
 
 const monthNames = ["Januari","Februari","Maret","April","Mei","Juni",
-                    "Juli","Agustus","September","Oktober","November","Desember"];
+                    "Juli","Agustus","September","Oktober","November","Desember"];
 
+// FUNGSI 1: Tentukan Batas Waktu Input (Tanggal 16, 23:59:59)
+function getDeadline() {
+    const now = new Date();
+    const deadlineDate = 16;
+    // Tentukan tanggal 16 di bulan ini
+    const deadline = new Date(now.getFullYear(), now.getMonth(), deadlineDate, 23, 59, 59);
+    return deadline;
+}
+
+// FUNGSI 2: Update Header
 (function updateHeader() {
-  const today = new Date();
-  const nextMonth = new Date(today.getFullYear(), today.getMonth() + 1, 1);
-  const nextMonthName = monthNames[nextMonth.getMonth()];
-  const headerText = `REQUEST LIBUR / CUTI BULAN ${nextMonthName.toUpperCase()}`;
-  document.getElementById('header-text').textContent = headerText;
-  document.getElementById('page-title').textContent = headerText;
+    const today = new Date();
+    const nextMonth = new Date(today.getFullYear(), today.getMonth() + 1, 1);
+    const nextMonthName = monthNames[nextMonth.getMonth()];
+    const headerText = `REQUEST LIBUR / CUTI BULAN ${nextMonthName.toUpperCase()}`;
+    
+    // Tampilkan Header
+    document.getElementById('header-text').innerHTML = `<i class="fas fa-calendar-alt"></i> ${headerText}`;
+    document.getElementById('page-title').textContent = headerText;
+    
+    // Tampilkan sisa waktu di footer (opsional)
+    const deadline = getDeadline();
+    const footerElement = document.getElementById('footer');
+    if (today > deadline) {
+        footerElement.innerHTML = `⚠️ **DEADLINE SUDAH TERLEWATI.** Anda tidak bisa lagi mengirimkan request bulan ini.`;
+        footerElement.style.color = '#B71C1C';
+        footerElement.style.fontWeight = 'bold';
+    } else {
+        const deadlineFormat = `${deadline.getDate()} ${monthNames[deadline.getMonth()]} pukul ${deadline.getHours()}:${deadline.getMinutes()}`;
+        footerElement.innerHTML = `⚠️ **DEADLINE INPUT:** ${deadlineFormat}. Inputan bisa direvisi/diganti berulang kali sebelum batas waktu. Gunakan dengan bijak! 🚀`;
+        footerElement.style.color = '#388E3C';
+    }
 })();
 
 const params = new URLSearchParams(window.location.search);
@@ -208,94 +53,137 @@ document.getElementById("group").value = params.get("group") || "";
 let fullDaysList = [];
 
 async function fetchFullDays() {
-  try {
-    const response = await fetch(quotaURL);
-    if (!response.ok) throw new Error(`HTTP error: ${response.status}`);
-    return await response.json();
-  } catch(e) {
-    console.error("Gagal mengambil kuota:", e);
-    return [];
-  }
+    try {
+        const response = await fetch(quotaURL);
+        if (!response.ok) throw new Error(`HTTP error: ${response.status}`);
+        return await response.json();
+    } catch(e) {
+        console.error("Gagal mengambil kuota:", e);
+        return [];
+    }
 }
 
 function initDatepicker(selector, disabledDays) {
-  const today = new Date();
-  const nextMonth = new Date(today.getFullYear(), today.getMonth() + 1, 1);
-  const disabledDates = disabledDays.map(day => new Date(nextMonth.getFullYear(), nextMonth.getMonth(), parseInt(day)));
+    const today = new Date();
+    const nextMonth = new Date(today.getFullYear(), today.getMonth() + 1, 1);
+    const disabledDates = disabledDays.map(day => new Date(nextMonth.getFullYear(), nextMonth.getMonth(), parseInt(day)));
 
-  if (document.querySelector(selector).datepicker) document.querySelector(selector).datepicker.destroy();
+    if (document.querySelector(selector).datepicker) document.querySelector(selector).datepicker.destroy();
 
-  const dp = new AirDatepicker(selector, {
-    multipleDates: true,
-    multipleDatesSeparator: ', ',
-    dateFormat: 'd-MM', // tampilkan 1-11, 2-11
-    disabledDates: disabledDates,
-    locale: {
-      days: ['Minggu','Senin','Selasa','Rabu','Kamis','Jumat','Sabtu'],
-      daysShort: ['Min','Sen','Sel','Rab','Kam','Jum','Sab'],
-      daysMin: ['Mg','Sn','Sl','Rb','Km','Jm','Sb'],
-      months: monthNames,
-      monthsShort: monthNames.map(m => m.substring(0, 3)),
-      today: 'Hari Ini',
-      clear: 'Bersihkan',
-      dateFormat: 'dd/MM/yyyy',
-      firstDay: 0
-    },
-    startDate: nextMonth,
-    minDate: nextMonth,
-    maxDate: new Date(nextMonth.getFullYear(), nextMonth.getMonth() + 1, 0),
-    position: 'bottom left',
-    readOnly: true
-  });
+    const dp = new AirDatepicker(selector, {
+        multipleDates: true,
+        multipleDatesSeparator: ', ',
+        dateFormat: 'd-MM', 
+        disabledDates: disabledDates,
+        locale: {
+            days: ['Minggu','Senin','Selasa','Rabu','Kamis','Jumat','Sabtu'],
+            daysShort: ['Min','Sen','Sel','Rab','Kam','Jum','Sab'],
+            daysMin: ['Mg','Sn','Sl','Rb','Km','Jm','Sb'],
+            months: monthNames,
+            monthsShort: monthNames.map(m => m.substring(0, 3)),
+            today: 'Hari Ini',
+            clear: 'Bersihkan',
+            dateFormat: 'dd/MM/yyyy',
+            firstDay: 0
+        },
+        startDate: nextMonth,
+        minDate: nextMonth,
+        maxDate: new Date(nextMonth.getFullYear(), nextMonth.getMonth() + 1, 0),
+        position: 'bottom left',
+        readOnly: true
+    });
 
-  if (selector === '#libur') datepickerLibur = dp;
-  else if (selector === '#cuti') datepickerCuti = dp;
+    if (selector === '#libur') datepickerLibur = dp;
+    else if (selector === '#cuti') datepickerCuti = dp;
 }
 
 async function initializeApp() {
-  fullDaysList = await fetchFullDays();
-  initDatepicker('#libur', fullDaysList);
-  initDatepicker('#cuti', fullDaysList);
+    fullDaysList = await fetchFullDays();
+    initDatepicker('#libur', fullDaysList);
+    initDatepicker('#cuti', fullDaysList);
+    
+    // Panggil fungsi untuk menonaktifkan form jika deadline terlewat
+    checkDeadlineAndDisableForm();
 }
 initializeApp();
 
+
+// FUNGSI 3: Cek Deadline dan Nonaktifkan Form
+function checkDeadlineAndDisableForm() {
+    const now = new Date();
+    const deadline = getDeadline();
+    const form = document.getElementById("requestForm");
+    const status = document.getElementById("status");
+    const submitButton = form.querySelector('button[type="submit"]');
+
+    if (now > deadline) {
+        // Nonaktifkan semua input yang bisa diubah
+        form.querySelectorAll('input:not([readonly]), select, button[type="submit"]').forEach(el => {
+            el.disabled = true;
+        });
+        // Nonaktifkan juga input tanggal (yang seharusnya sudah readonly, tapi sebagai pengaman)
+        document.getElementById("libur").style.cursor = 'not-allowed';
+        document.getElementById("cuti").style.cursor = 'not-allowed';
+        
+        // Ganti teks tombol
+        submitButton.innerHTML = `<i class="fas fa-lock"></i> DEADLINE SUDAH TERLEWATI`;
+        submitButton.style.background = '#e57373';
+        submitButton.style.boxShadow = '0 8px 20px rgba(229, 115, 115, 0.4)';
+        
+        status.textContent = `❌ Maaf, batas waktu input sudah lewat. Request tidak dapat diproses.`;
+        status.className = "error";
+        return true; // Mengindikasikan bahwa form dinonaktifkan
+    }
+    return false; // Mengindikasikan form aktif
+}
+
+
 document.getElementById("requestForm").addEventListener("submit", function(e){
-  e.preventDefault();
-  const status = document.getElementById("status");
-  status.textContent = "⏳ Mengirim data...";
-  status.className = "";
+    e.preventDefault();
+    
+    // Pengecekan KETAT saat tombol submit diklik
+    if (checkDeadlineAndDisableForm()) {
+        return; // Hentikan proses submit jika sudah deadline
+    }
 
-  const formData = new FormData();
-  formData.append('nik', document.getElementById("nik").value);
-  formData.append('nama', document.getElementById("nama").value);
-  formData.append('group', document.getElementById("group").value);
-  formData.append('requestLainnya', document.getElementById("requestLainnya").value);
-  formData.append('ekstrakulikuler', document.getElementById("ekstrakulikuler").value);
-  formData.append('libur', document.getElementById("libur").value || "");
-  formData.append('cuti', document.getElementById("cuti").value || "");
+    const status = document.getElementById("status");
+    status.textContent = "⏳ Mengirim data...";
+    status.className = "";
 
-  fetch(scriptURL, { method: "POST", body: formData })
-    .then(res=>res.text())
-    .then(resText=>{
-      if (resText.includes("Gagal: Kuota untuk tanggal") && resText.includes("sudah penuh")) {
-        const match = resText.match(/tanggal\s+([\d-]+)\s+sudah/);
-        const blockedDay = match ? match[1] : "xx";
-        status.textContent = `❌ Kuota penuh tanggal ${blockedDay} (maks ${MAX_KUOTA_HARIAN}).`;
-        status.className = "error";
-      } else if(resText.trim().startsWith("Sukses")) {
-        status.textContent = "✅ "+resText.trim();
-        status.className = "success";
-        setTimeout(initializeApp, 500);
-      } else {
-        status.textContent = "❌ "+(resText.includes("Gagal") ? resText : "Gagal mengirim data!");
-        status.className = "error";
-      }
-    })
-    .catch(()=>{
-      status.textContent = "❌ Gagal mengirim data! Cek koneksi atau URL Web App";
-      status.className = "error";
-    });
+    const formData = new FormData();
+    formData.append('nik', document.getElementById("nik").value);
+    formData.append('nama', document.getElementById("nama").value);
+    formData.append('group', document.getElementById("group").value);
+    formData.append('requestLainnya', document.getElementById("requestLainnya").value);
+    formData.append('ekstrakulikuler', document.getElementById("ekstrakulikuler").value);
+    
+    const liburValue = document.getElementById("libur").value;
+    const cutiValue = document.getElementById("cuti").value;
+
+    formData.append('libur', liburValue || "");
+    formData.append('cuti', cutiValue || "");
+    
+    fetch(scriptURL, { method: "POST", body: formData })
+        .then(res=>res.text())
+        .then(resText=>{
+            if (resText.includes("Gagal: Kuota untuk tanggal") && resText.includes("sudah penuh")) {
+                const match = resText.match(/tanggal\s+([\d-]+)\s+sudah/);
+                const blockedDay = match ? match[1] : "xx";
+                status.textContent = `❌ Kuota penuh tanggal ${blockedDay} (maks ${MAX_KUOTA_HARIAN}).`;
+                status.className = "error";
+            } else if(resText.trim().startsWith("Sukses")) {
+                status.textContent = "✅ "+resText.trim();
+                status.className = "success";
+                // Setelah sukses, panggil ulang inisialisasi untuk refresh kuota
+                setTimeout(initializeApp, 500); 
+            } else {
+                status.textContent = "❌ "+(resText.includes("Gagal") ? resText : "Gagal mengirim data!");
+                status.className = "error";
+            }
+        })
+        .catch(()=>{
+            status.textContent = "❌ Gagal mengirim data! Cek koneksi atau URL Web App";
+            status.className = "error";
+        });
 });
 </script>
-</body>
-</html>
