--- a/form-request.html
+++ b/form-request.html
@@ -1,13 +1,189 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+<meta charset="UTF-8">
+<title id="page-title">REQUEST LIBUR / CUTI JADWAL BULAN DEPAN</title>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/air-datepicker@3.5.0/air-datepicker.min.css">
+
+<style>
+/* --- STYLE CSS MODERN --- */
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  margin: 0;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(135deg, #74ebd5, #ACB6E5);
+  padding: 20px;
+}
+
+.container {
+  background: #fff;
+  padding: 35px 30px 40px;
+  border-radius: 20px;
+  box-shadow: 0 12px 35px rgba(0,0,0,0.15);
+  width: 480px;
+  max-width: 100%;
+  animation: fadeIn 0.6s ease-in-out;
+  position: relative;
+}
+
+.container::before {
+  content: "";
+  position: absolute;
+  width: 180%;
+  height: 180%;
+  background: radial-gradient(circle at top left, rgba(172,182,229,0.15), transparent 70%);
+  top: -50%;
+  left: -50%;
+  transform: rotate(25deg);
+  pointer-events: none;
+}
+
+h2 {
+  text-align: center;
+  margin-bottom: 25px;
+  font-size: 24px;
+  font-weight: 700;
+  background: linear-gradient(90deg, #4e54c8, #8f94fb);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  letter-spacing: 1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+}
+
+label {
+  display: block;
+  margin-bottom: 6px;
+  font-size: 14px;
+  font-weight: 600;
+  color: #444;
+}
+
+input, select {
+  width: 100%;
+  padding: 12px 14px;
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  font-size: 14px;
+  margin-bottom: 16px;
+  box-sizing: border-box;
+  transition: all 0.3s ease;
+  background-color: #fdfdfd;
+}
+
+input:focus, select:focus {
+  border-color: #4e54c8;
+  box-shadow: 0 0 8px rgba(78,84,200,0.3);
+  background-color: #fff;
+  outline: none;
+}
+
+input[readonly] {
+  background-color: #f3f3f3;
+  color: #555;
+}
+
+button[type="submit"] {
+  width: 100%;
+  padding: 14px;
+  margin-top: 5px;
+  font-size: 15px;
+  font-weight: 600;
+  border: none;
+  border-radius: 12px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  background: linear-gradient(90deg, #11998e, #38ef7d);
+  color: #fff;
+  box-shadow: 0 6px 15px rgba(17,153,142,0.35);
+}
+
+button[type="submit"]:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 10px 20px rgba(17,153,142,0.45);
+}
+
+#status {
+  margin-top: 18px;
+  text-align: center;
+  font-size: 14px;
+  font-weight: 500;
+  min-height: 28px;
+  padding: 6px;
+  border-radius: 8px;
+}
+
+.success { color: #155724; background: #d4edda; border: 1px solid #c3e6cb; }
+.error   { color: #721c24; background: #f8d7da; border: 1px solid #f5c6cb; }
+
+#footer {
+  font-size: 11px;
+  color: #666;
+  text-align: center;
+  margin-top: 20px;
+  line-height: 1.4;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(-15px); }
+  to { opacity: 1; transform: translateY(0); }
+}
+</style>
+</head>
+<body>
+
+<div class="container">
+  <h2 id="header-text">REQUEST LIBUR / CUTI JADWAL BULAN DEPAN</h2>
+
+  <form id="requestForm">
+    <label>NIK</label>
+    <input type="text" id="nik" name="nik" readonly>
+
+    <label>Nama</label>
+    <input type="text" id="nama" name="nama" readonly>
+
+    <label>Group</label>
+    <input type="text" id="group" name="group" readonly>
+
+    <label>Request Libur (Klik kotak input)</label>
+    <input type="text" id="libur" name="libur" placeholder="Pilih tanggal libur" readonly>
+
+    <label>Request Cuti (Klik kotak input)</label>
+    <input type="text" id="cuti" name="cuti" placeholder="Pilih tanggal cuti" readonly>
+
+    <label>Request Lainnya</label>
+    <input type="text" id="requestLainnya" name="requestLainnya" placeholder="Jawaban singkat, maks 80 karakter" maxlength="80">
+
+    <label>Ekstrakulikuler yang diikuti</label>
+    <select id="ekstrakulikuler" name="ekstrakulikuler" required>
+      <option value="">-- Pilih --</option>
+      <option value="FUTSAL">FUTSAL</option>
+      <option value="BADMINTON">BADMINTON</option>
+      <option value="FUTSAL & BADMINTON">FUTSAL & BADMINTON</option>
+      <option value="TIDAK MENGIKUTI">TIDAK MENGIKUTI</option>
+    </select>
+
+    <button type="submit">KIRIM REQUEST</button>
+    <div id="status"></div>
+
+    <div id="footer">
+      Silakan Request Jadwal sesuai keperluan saja.<br>
+      Inputan bisa direvisi / diganti berulang kali. Gunakan dengan bijak! 🚀
+    </div>
+  </form>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/air-datepicker@3.5.0/air-datepicker.min.js"></script>
 <script>
 /* === KONFIGURASI SCRIPT === */
 const scriptURL = "https://script.google.com/macros/s/AKfycbyrVWiH3HUNiNwdWR-AshygBO1yHv4ltdNeUgkcJS5ZyrBJsILxjRFjTd-YzXNTSUtF/exec";
 const quotaURL = scriptURL;
-const MAX_KUOTA_HARIAN = 21; // ✅ kuota maksimal per hari
-
-// Deadline input → tanggal 16 jam 23:59 bulan berjalan
-const DEADLINE_DAY = 16;
-const DEADLINE_HOUR = 23;
-const DEADLINE_MINUTE = 59;
+const MAX_KUOTA_HARIAN = 21; // ✅ revisi: kuota maksimal per hari
 
 let datepickerLibur = null;
 let datepickerCuti = null;
@@ -15,7 +191,6 @@ let datepickerCuti = null;
 const monthNames = ["Januari","Februari","Maret","April","Mei","Juni",
                     "Juli","Agustus","September","Oktober","November","Desember"];
 
-/* === Fungsi untuk update judul halaman === */
 (function updateHeader() {
   const today = new Date();
   const nextMonth = new Date(today.getFullYear(), today.getMonth() + 1, 1);
@@ -25,29 +200,11 @@ const monthNames = ["Januari","Februari","Maret","April","Mei","Juni",
   document.getElementById('page-title').textContent = headerText;
 })();
 
-/* === Ambil parameter NIK, Nama, Group === */
 const params = new URLSearchParams(window.location.search);
 document.getElementById("nik").value = params.get("nik") || "";
 document.getElementById("nama").value = params.get("nama") || "";
 document.getElementById("group").value = params.get("group") || "";
 
-/* === Cek Deadline === */
-function checkDeadline() {
-  const now = new Date();
-  const deadline = new Date(now.getFullYear(), now.getMonth(), DEADLINE_DAY, DEADLINE_HOUR, DEADLINE_MINUTE, 59);
-
-  if (now > deadline) {
-    const form = document.getElementById("requestForm");
-    const status = document.getElementById("status");
-    Array.from(form.elements).forEach(el => el.disabled = true);
-    status.textContent = `❌ Input ditutup sejak ${DEADLINE_DAY}/${now.getMonth()+1} ${DEADLINE_HOUR}:${DEADLINE_MINUTE}`;
-    status.className = "error";
-    return false;
-  }
-  return true;
-}
-
-/* === Fetch kuota penuh dari GAS === */
 let fullDaysList = [];
 
 async function fetchFullDays() {
@@ -61,7 +218,6 @@ async function fetchFullDays() {
   }
 }
 
-/* === Datepicker Setup === */
 function initDatepicker(selector, disabledDays) {
   const today = new Date();
   const nextMonth = new Date(today.getFullYear(), today.getMonth() + 1, 1);
@@ -72,7 +228,7 @@ function initDatepicker(selector, disabledDays) {
   const dp = new AirDatepicker(selector, {
     multipleDates: true,
     multipleDatesSeparator: ', ',
-    dateFormat: 'd-MM', // contoh 1-11, 2-11
+    dateFormat: 'd-MM', // tampilkan 1-11, 2-11
     disabledDates: disabledDates,
     locale: {
       days: ['Minggu','Senin','Selasa','Rabu','Kamis','Jumat','Sabtu'],
@@ -97,18 +253,14 @@ function initDatepicker(selector, disabledDays) {
 }
 
 async function initializeApp() {
-  if (!checkDeadline()) return; // stop jika sudah lewat deadline
   fullDaysList = await fetchFullDays();
   initDatepicker('#libur', fullDaysList);
   initDatepicker('#cuti', fullDaysList);
 }
 initializeApp();
 
-/* === Event Submit === */
 document.getElementById("requestForm").addEventListener("submit", function(e){
   e.preventDefault();
-  if (!checkDeadline()) return; // stop jika sudah lewat deadline
-
   const status = document.getElementById("status");
   status.textContent = "⏳ Mengirim data...";
   status.className = "";
@@ -145,3 +297,5 @@ document.getElementById("requestForm").addEventListener("submit", function(e){
     });
 });
 </script>
+</body>
+</html>
