--- a/form-request.html
+++ b/form-request.html
@@ -31,7 +31,6 @@
     const nextMonthName = monthNames[nextMonth.getMonth()];
     const headerText = `REQUEST LIBUR / CUTI BULAN ${nextMonthName.toUpperCase()}`;
     
-    // Perbaikan: Pastikan elemen ada sebelum dimanipulasi (walaupun sudah ada DOMContentLoaded)
     const headerElement = document.getElementById('header-text');
     const titleElement = document.getElementById('page-title');
     if (headerElement) headerElement.innerHTML = `<i class="fas fa-calendar-alt"></i> ${headerText}`;
@@ -39,7 +38,7 @@
 
     const { startDate, expiredDate } = getDeadline();
     const footerElement = document.getElementById('footer');
-    if (!footerElement) return; // Keluar jika footer tidak ditemukan
+    if (!footerElement) return;
 
     if (today < startDate) {
       const startFormat = `${startDate.getDate()} ${monthNames[startDate.getMonth()]} pukul ${String(startDate.getHours()).padStart(2,'0')}:${String(startDate.getMinutes()).padStart(2,'0')}`;
@@ -77,7 +76,6 @@
   // FUNGSI BARU: Mengambil hari-hari yang sudah penuh dari GAS
   async function fetchFullDays() { 
     try {
-      // Menggunakan URL Web App untuk memanggil doGet
       const response = await fetch(quotaURL); 
       if (!response.ok) throw new Error(`HTTP error: ${response.status}`);
       return await response.json(); 
@@ -94,7 +92,6 @@
     
     const disabledDates = disabledDays.map(day => new Date(nextMonth.getFullYear(), nextMonth.getMonth(), parseInt(day)));
 
-    // destroy jika sudah ada
     const el = document.querySelector(selector);
     if (!el) return;
     if (el.datepicker) el.datepicker.destroy();
@@ -103,7 +100,7 @@
       multipleDates: true,
       multipleDatesSeparator: ', ',
       dateFormat: 'd-MM', 
-      disabledDates: disabledDates, // Digunakan untuk menonaktifkan hari yang kuotanya penuh
+      disabledDates: disabledDates, 
       locale: {
         days: ['Minggu','Senin','Selasa','Rabu','Kamis','Jumat','Sabtu'],
         daysShort: ['Min','Sen','Sel','Rab','Kam','Jum','Sab'],
@@ -132,7 +129,9 @@
     const { startDate, expiredDate } = getDeadline();
     const form = document.getElementById("requestForm");
     const status = document.getElementById("status");
-    const submitButton = form.querySelector('button[type="submit"]');
+    const submitButton = form ? form.querySelector('button[type="submit"]') : null;
+
+    if (!form || !submitButton) return false;
 
     if (now < startDate || now > expiredDate) {
       form.querySelectorAll('input:not([readonly]), select, button[type="submit"]').forEach(el => {
@@ -176,70 +175,71 @@
   }
 
   // --- PERBAIKAN FATAL ERROR: MEMASTIKAN DOM SIAP ---
-  // Pindahkan kode inisialisasi awal ke dalam DOMContentLoaded
   document.addEventListener('DOMContentLoaded', function() {
-    // Ambil query params (jika dialihkan dari halaman sebelumnya)
-    const params = new URLSearchParams(window.location.search);
-    document.getElementById("nik").value = params.get("nik") || "";
-    document.getElementById("nama").value = params.get("nama") || "";
-    document.getElementById("group").value = params.get("group") || "";
     
-    // Panggil inisialisasi utama setelah elemen HTML tersedia
+    // AMBIL QUERY PARAMS (PERBAIKAN ERROR BARIS 183)
+    const params = new URLSearchParams(window.location.search);
+    const nikInput = document.getElementById("nik");
+    const namaInput = document.getElementById("nama");
+    const groupInput = document.getElementById("group");
+
+    if (nikInput) nikInput.value = params.get("nik") || "";
+    if (namaInput) namaInput.value = params.get("nama") || "";
+    if (groupInput) groupInput.value = params.get("group") || "";
+    
+    // INISIALISASI UTAMA
     initializeApp(); 
-  });
-  // --------------------------------------------------
 
-  document.getElementById("requestForm").addEventListener("submit", function(e){
-    e.preventDefault();
-
-    if (checkDeadlineAndDisableForm()) return;
-
-    const status = document.getElementById("status");
-    status.textContent = "⏳ Mengirim data...";
-    status.className = "";
-
-    const formData = new FormData();
-    formData.append('nik', document.getElementById("nik").value);
-    formData.append('nama', document.getElementById("nama").value);
-    formData.append('group', document.getElementById("group").value);
-    formData.append('requestLainnya', document.getElementById("requestLainnya").value);
-    formData.append('ekstrakulikuler', document.getElementById("ekstrakulikuler").value);
-
-    // Data dikirim dalam format d-MM, d2-MM (misal: 21-11, 22-11)
-    const liburValue = document.getElementById("libur").value;
-    const cutiValue = document.getElementById("cuti").value;
-
-    formData.append('libur', liburValue || "");
-    formData.append('cuti', cutiValue || "");
-
-    fetch(scriptURL, { method: "POST", body: formData })
-      .then(res => res.text())
-      .then(resText => {
-        
-        // --- LOGIKA PENANGANAN KUOTA ---
-        if (resText.includes("Gagal: Kuota untuk tanggal") && resText.includes("sudah penuh")) {
-          // Tangkap pesan error dari GAS
-          const match = resText.match(/tanggal\s+([\d-]+)\s+sudah/);
-          const blockedDay = match ? match[1] : "xx-xx";
-          status.textContent = `❌ Kuota penuh tanggal ${blockedDay} (maks ${QUOTA_LIMIT} user).`;
-          status.className = "error";
-          // Panggil initializeApp untuk mengupdate daftar tanggal yang diblokir di datepicker
-          setTimeout(initializeApp, 500); 
-        } else if (resText.trim().startsWith("Sukses")) {
-          status.textContent = "✅ " + resText.trim();
-          status.className = "success";
-          // Jika sukses, panggil initializeApp untuk mengambil kuota terbaru
-          setTimeout(initializeApp, 500); 
-        } else {
-          status.textContent = "❌ " + (resText.includes("Gagal") ? resText : "Gagal mengirim data!");
-          status.className = "error";
-        }
-        // --- AKHIR LOGIKA PENANGANAN KUOTA ---
-
-      })
-      .catch(() => {
-        status.textContent = "❌ Gagal mengirim data! Cek koneksi atau URL Web App";
-        status.className = "error";
+    // TAMBAHKAN EVENT LISTENER (PERBAIKAN ERROR BARIS 192)
+    const requestForm = document.getElementById("requestForm");
+    if (requestForm) {
+      requestForm.addEventListener("submit", function(e){
+        e.preventDefault();
+  
+        if (checkDeadlineAndDisableForm()) return;
+  
+        const status = document.getElementById("status");
+        status.textContent = "⏳ Mengirim data...";
+        status.className = "";
+  
+        const formData = new FormData();
+        formData.append('nik', document.getElementById("nik").value);
+        formData.append('nama', document.getElementById("nama").value);
+        formData.append('group', document.getElementById("group").value);
+        formData.append('requestLainnya', document.getElementById("requestLainnya").value);
+        formData.append('ekstrakulikuler', document.getElementById("ekstrakulikuler").value);
+  
+        const liburValue = document.getElementById("libur").value;
+        const cutiValue = document.getElementById("cuti").value;
+  
+        formData.append('libur', liburValue || "");
+        formData.append('cuti', cutiValue || "");
+  
+        fetch(scriptURL, { method: "POST", body: formData })
+          .then(res => res.text())
+          .then(resText => {
+            
+            if (resText.includes("Gagal: Kuota untuk tanggal") && resText.includes("sudah penuh")) {
+              const match = resText.match(/tanggal\s+([\d-]+)\s+sudah/);
+              const blockedDay = match ? match[1] : "xx-xx";
+              status.textContent = `❌ Kuota penuh tanggal ${blockedDay} (maks ${QUOTA_LIMIT} user).`;
+              status.className = "error";
+              setTimeout(initializeApp, 500); 
+            } else if (resText.trim().startsWith("Sukses")) {
+              status.textContent = "✅ " + resText.trim();
+              status.className = "success";
+              setTimeout(initializeApp, 500); 
+            } else {
+              status.textContent = "❌ " + (resText.includes("Gagal") ? resText : "Gagal mengirim data!");
+              status.className = "error";
+            }
+  
+          })
+          .catch(() => {
+            status.textContent = "❌ Gagal mengirim data! Cek koneksi atau URL Web App";
+            status.className = "error";
+          });
       });
+    }
   });
 </script>
